force-app/main/default/objects/Guarantee_Fee_Detail__x/Guarantee_Fee_Detail__x.object-meta.xml
<CustomObject>
    <externalDataSource>Core_Banking_Data_Source</externalDataSource>
    <externalName>GuaranteeFeeDetail</externalName>
    <label>Fee</label>
    <pluralLabel>Fees</pluralLabel>
</CustomObject>