force-app/main/default/objects/Guarantee_Fee_Detail__x/fields/Active_Indemnity_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>Active_Indemnity_Guarantee__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - EBD</complianceGroup>
    <description>Associated Id of Active IG</description>
    <externalDeveloperName>ActiveGuaranteeId</externalDeveloperName>
    <label>Active Indemnity Guarantee</label>
    <length>18</length>
    <referenceTo>Active_Indemnity_Guarantee__x</referenceTo>
    <relationshipLabel>Guarantee Fee Details</relationshipLabel>
    <relationshipName>Guarantee_Fee_Details</relationshipName>
    <type>ExternalLookup</type>
</CustomField>