force-app/main/default/objects/Guarantee_Fee_Detail__x/fields/Fee_Charge_Account__c.field-meta.xml
<CustomField>
    <fullName>Fee_Charge_Account__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - EBD</complianceGroup>
    <description>Fee Charge Account</description>
    <externalDeveloperName>FeeChargeAccount</externalDeveloperName>
    <label>Fee Charge Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>