force-app/main/default/objects/Guarantee_Fee_Detail__x/fields/Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>Fee_Type__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - EBD</complianceGroup>
    <description>Facility Fee/Per Bank</description>
    <externalDeveloperName>FeeType</externalDeveloperName>
    <label>Fee Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>