force-app/main/default/objects/Guarantee_Fee_Detail__x/fields/Inactive_Indemnity_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Indemnity_Guarantee__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - EBD</complianceGroup>
    <description>Associated Id of Inactive IG</description>
    <externalDeveloperName>InactiveGuaranteeId</externalDeveloperName>
    <label>Inactive Indemnity Guarantee</label>
    <length>18</length>
    <referenceTo>Inactive_Indemnity_Guarantee__x</referenceTo>
    <relationshipLabel>Guarantee Fee Details</relationshipLabel>
    <relationshipName>Guarantee_Fee_Details</relationshipName>
    <type>ExternalLookup</type>
</CustomField>