force-app/main/default/objects/Guarantee_Fee_Detail__x/fields/Per_Bank_G_tee_Fee__c.field-meta.xml
<CustomField>
    <fullName>Per_Bank_G_tee_Fee__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - EBD</complianceGroup>
    <description>Fee Rate (%)</description>
    <externalDeveloperName>FeePercent</externalDeveloperName>
    <label>Fee Rate (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>