force-app/main/default/objects/Guarantee_Fee_Detail__x/fields/Per_Bank_G_tee_Fee_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Per_Bank_G_tee_Fee_Frequency__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - EBD</complianceGroup>
    <description>Fee Frequency</description>
    <externalDeveloperName>Frequency</externalDeveloperName>
    <label>Fee Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>