force-app/main/default/objects/Guarantee_Fee_Detail__x/fields/Seq__c.field-meta.xml
<CustomField>
    <fullName>Seq__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - EBD</complianceGroup>
    <description>Sequence Number</description>
    <externalDeveloperName>Seq</externalDeveloperName>
    <label>Seq</label>
    <length>255</length>
    <type>Text</type>
</CustomField>